tests/baselines/reference/invalid-incomplete-groupname.errors.txt
invalid-incomplete-groupname.ts(14,4): error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.


==== invalid-incomplete-groupname.ts (1 errors) ====
    // Copyright 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    description: GroupName is `< RegExpIdentifierName >`.
    esid: prod-GroupName
    negative:
      phase: parse
      type: SyntaxError
    features: [regexp-named-groups]
    ---*/
    
    
    /(?<a>.)\k/;
       ~~~
!!! error TS1501: Named capturing groups are only available when targeting 'ES2018' or later.
    